# codespy

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  action.yml  codespy.yaml  docker-compose.yml  pyproject.toml  trace.txt
.github/workflows/: ci.yml  codespy-review.yml.example  docker-publish.yml
Formula/: codespy.rb
src/codespy/: __init__.py  cli.py  cli_local.py  cli_mcp_server.py  cli_remote.py  config.py  config_dspy.py  config_git.py  config_io.py  config_llm.py
src/codespy/agents/: __init__.py  cost_tracker.py  dspy_config.py
src/codespy/agents/reviewer/: __init__.py  models.py  pipeline.py  reviewer.py  server.py  signatures.py
src/codespy/agents/reviewer/modules/: __init__.py  base.py  bug_detector.py  bugs.py  code_and_doc_reviewer.py  context.py  deduplicator.py  defect_detector.py  doc_reviewer.py  docs.py  domain_expert.py  helpers.py  scope_identifier.py  security.py  security_auditor.py  smell_detector.py  supply_chain_auditor.py
src/codespy/agents/reviewer/reporters/: __init__.py  base.py  git.py  github_pr.py  stdout.py
src/codespy/analysis/: __init__.py  ripgrep.py  treesitter.py
src/codespy/github/: __init__.py  client.py  models.py
src/codespy/review/: __init__.py  models.py  pipeline.py  signatures.py
src/codespy/review/modules/: __init__.py  base.py  bugs.py  context.py  docs.py  security.py
src/codespy/tools/: __init__.py  mcp_utils.py
src/codespy/tools/cyber/: __init__.py
src/codespy/tools/cyber/osv/: __init__.py  client.py  models.py  server.py
src/codespy/tools/filesystem/: __init__.py  client.py  mcp.py  models.py  server.py
src/codespy/tools/git/: __init__.py  base.py  client.py  github_client.py  gitlab_client.py  local_diff.py  models.py  reporter.py  server.py
src/codespy/tools/github/: __init__.py  client.py  mcp.py  models.py  server.py
src/codespy/tools/parsers/: __init__.py  ripgrep.py  treesitter.py
src/codespy/tools/parsers/ripgrep/: __init__.py  mcp.py  server.py
src/codespy/tools/parsers/treesitter/: __init__.py  base_extractor.py  mcp.py  models.py  parser.py  server.py
src/codespy/tools/parsers/treesitter/extractors/: __init__.py  go.py  java.py  javascript.py  kotlin.py  objc.py  python.py  rust.py  swift.py  terraform.py
src/codespy/tools/web/: __init__.py  client.py  mcp.py  models.py  server.py
