[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codespy"
version = "0.1.0"
description = "Code review agent powered by DSPy"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "codespy", email = "codespy@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dspy-ai>=2.5.0",
    "litellm>=1.50.0",
    "PyGithub>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "gitpython>=3.1.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",  # Required for AWS Bedrock
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
codespy = "codespy.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/codespy"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true