[tool.poetry]
name = "codespy"
version = "0.1.0"
description = "Code review agent powered by DSPy"
readme = "README.md"
license = "MIT"
authors = ["codespy <codespy@example.com>"]
packages = [{ include = "codespy", from = "src" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
dspy = {version = ">=3.0.0", extras = ["mcp"]}
litellm = "^1.81.6"
cachetools = ">=5.0.0"
PyGithub = ">=2.5.0"
typer = ">=0.12.0"
rich = ">=13.9.0"
pydantic = ">=2.10.0"
pydantic-settings = ">=2.6.0"
gitpython = ">=3.1.0"
httpx = ">=0.28.0"
boto3 = ">=1.35.0"  # Required for AWS Bedrock
cloudpickle = "^3.1.2"
json-repair = "^0.55.1"
tree-sitter = ">=0.23"
tree-sitter-go = ">=0.23"
tree-sitter-python = ">=0.23"
tree-sitter-javascript = ">=0.23"
tree-sitter-typescript = ">=0.23"
tree-sitter-swift = ">=0.0.1"
tree-sitter-java = ">=0.23"
tree-sitter-kotlin = ">=1.0"
tree-sitter-objc = ">=3.0"
tree-sitter-rust = ">=0.23"
tree-sitter-hcl = ">=1.2.0"
mcp = ">=1.0.0"
beautifulsoup4 = ">=4.12.0"
markdownify = ">=0.13.0"
ddgs = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
ruff = ">=0.8.0"
mypy = ">=1.13.0"

[tool.poetry.scripts]
codespy = "codespy.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true